[Various] Reduce bg size on mobile, fix back links

--- a/css/faq.css
+++ b/css/faq.css
@@ -90,7 +90,11 @@ ol {
     overflow: hidden;
     width: 50%;
 }
-#back, #files_mb {
+#back {
+    float: left;
+    margin-top: 2px;
+}
+#files_mb {
     float: left;
 }
 #files_jp {
